# leads_scraper

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  run.bat  run.sh  vercel.json
backend/: Dockerfile  agent_runtime.py  api.py  pyproject.toml  requirements.txt  scraper.py  scraper_config.json  scraper_config.py  scraper_dedupe_store.py  scraper_enrichment.py  scraper_exporters.py  scraper_maps.py  scraper_models.py  scraper_utils.py
backend/tests/: test_agent_api.py  test_agent_runtime.py  test_api.py  test_dedupe_store.py  test_exporters.py  test_scraper.py  test_scraper_maps.py  test_utils.py
frontend/: Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/scripts/: clear-sqlite.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: active-run.tsx  agent-insights.tsx  agent-run-form.tsx  agent-run-tracker.tsx  agent-runs-history.tsx  data-table.tsx  exports-list.tsx  header.tsx  history-rail.tsx  job-tracker.tsx  jobs-history.tsx  leads-table.tsx  output-panel.tsx  run-console.tsx  scrape-form.tsx  top-tape.tsx
frontend/src/hooks/: use-agent-run.ts  use-exports.ts  use-scraper.ts
frontend/src/lib/: scraper-api.ts  store.ts
frontend/src/types/: index.ts
